<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/class_schedule_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_burgundy"
    tools:context=".screens.ClassScheduleActivity">

    <!--Will open the menu (Maps, Directions, or class schedule)-->
    <ImageButton
        android:id="@+id/button_menu"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="6dp"
        android:background="@null"
        android:contentDescription="@string/menu"
        android:src="@drawable/ic_menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@android:color/white" />

    <TextView
        android:id="@+id/title_class_schedule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawableLeft="@drawable/ic_schedule"
        android:drawablePadding="8dp"
        android:gravity="center"
        android:text="@string/class_schedule"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/schedule_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="14dp"
        android:background="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/button_import_calendar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_class_schedule" />

    <TextView
        android:id="@+id/footer_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/currently_loaded_google_calendar"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_import_calendar"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_import_calendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@android:color/white"
        android:elevation="4dp"
        android:text="@string/import_calendar"
        android:textColor="@color/concordia_red"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerFamily="rounded"
        app:icon="@drawable/ic_import"
        app:iconGravity="textStart"
        app:iconPadding="8dp"
        app:iconSize="24dp"
        app:iconTint="@color/concordia_red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <include
        layout="@layout/main_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />


</androidx.constraintlayout.widget.ConstraintLayout>
